# orocoros2

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/orocoros2/: pongComp.hpp  refereeComp.hpp
launch/: PingPong.lua  PingPong.ops
src/: pongComp.cpp  refereeComp.cpp
