<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orocoros2</name>
  <version>0.1.0</version>
  <description>Experiments wuth Orocos and ROS2</description>
  <maintainer email="harle@isir.upmc.fr">Antoine Harlé</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>boost</depend> -->
  <depend>rclcpp</depend>
  <depend>rtt_ros2</depend>
  <depend>rtt_ros2_params</depend>
  <depend>rtt_ros2_std_msgs</depend>
  <depend>oe_msgs</depend>
  <depend>rtt_ros2_oe_msgs</depend>
  <!-- <depend>orocoros2_msgs</depend> -->
  <!-- <depend>orocoros2_rtt_msgs</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
